--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -13,6 +13,7 @@
   },
   "scripts": {
     "build": "pnpm exec tsc -p tsconfig.json",
+    "dev": "pnpm exec tsc -p tsconfig.json --watch --preserveWatchOutput",
     "typecheck": "pnpm exec tsc --noEmit -p tsconfig.json"
   }
 }
