--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -11,6 +11,7 @@
     "typecheck": "pnpm exec tsc --noEmit -p tsconfig.json",
     "phase-r2:gate-snapshot": "node scripts/phase-r2-gate-snapshot.mjs",
     "verify:fts5": "pnpm run build && node scripts/verify-fts5.mjs",
+    "verify:insights-e2e": "pnpm run build && node dist/verify-insights-e2e.js",
     "verify:position-engine": "pnpm run build && node dist/verify-position-engine.js",
     "verify:completeness-v2": "pnpm run build && node dist/verify-completeness-v2.js"
   },
