Fix scene list and panel layout

--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -12,14 +12,17 @@
   },
   "dependencies": {
     "@mytrader/shared": "workspace:*",
+    "katex": "^0.16.33",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-katex": "^3.1.0"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.11",
     "@tailwindcss/typography": "^0.5.19",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
+    "@types/react-katex": "^3.0.4",
     "@vitejs/plugin-react": "^4.2.0",
     "autoprefixer": "^10.4.24",
     "postcss": "^8.5.6",
